--- a/GP_app/app/src/main/AndroidManifest.xml
+++ b/GP_app/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         </activity>
         <activity android:name=".activity.PostActivity">
         </activity>
+        <activity android:name=".activity.CommentActivity">
+        </activity>
 
     </application>
 
