--- a/GP_app/app/src/main/AndroidManifest.xml
+++ b/GP_app/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_baseline_storefront_24"
+        android:icon="@drawable/world"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_baseline_storefront_24"
+        android:roundIcon="@drawable/world"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity">
